fix icon missing while using winqtdeploy

--- a/client/resources.qrc
+++ b/client/resources.qrc
@@ -1,4 +1,96 @@
 <RCC>
     <qresource prefix="/icons">
+        <file>images/Backward.svg</file>
+        <file>images/Bird.svg</file>
+        <file>images/FastBackward.svg</file>
+        <file>images/_zoom_in.svg</file>
+        <file>images/_zoom_out.svg</file>
+        <file>images/add_item.svg</file>
+        <file>images/asce.svg</file>
+        <file>images/back.svg</file>
+        <file>images/better_folder.svg</file>
+        <file>images/better_new_something.svg</file>
+        <file>images/better_setting.svg</file>
+        <file>images/blue_vote.svg</file>
+        <file>images/butterfly.svg</file>
+        <file>images/cat.svg</file>
+        <file>images/changjinglu.svg</file>
+        <file>images/chat_other.svg</file>
+        <file>images/chat_self.svg</file>
+        <file>images/cheers.svg</file>
+        <file>images/cloud.svg</file>
+        <file>images/color_refresh.svg</file>
+        <file>images/confirm.svg</file>
+        <file>images/copy.svg</file>
+        <file>images/cpp.svg</file>
+        <file>images/cut.svg</file>
+        <file>images/delete.svg</file>
+        <file>images/desce.svg</file>
+        <file>images/detail.svg</file>
+        <file>images/do_it.svg</file>
+        <file>images/email.svg</file>
+        <file>images/excel.svg</file>
+        <file>images/fast-forward.svg</file>
+        <file>images/feng_leaf.svg</file>
+        <file>images/file_name.svg</file>
+        <file>images/flower.svg</file>
+        <file>images/flush.svg</file>
+        <file>images/green_file.svg</file>
+        <file>images/green_leaf.svg</file>
+        <file>images/guihua.svg</file>
+        <file>images/happy.svg</file>
+        <file>images/hide_password.svg</file>
+        <file>images/img_file.svg</file>
+        <file>images/leaf.svg</file>
+        <file>images/left_side.svg</file>
+        <file>images/mifeng.svg</file>
+        <file>images/modify.svg</file>
+        <file>images/move_down.svg</file>
+        <file>images/move_up.svg</file>
+        <file>images/name.svg</file>
+        <file>images/new_dir.svg</file>
+        <file>images/new_something.svg</file>
+        <file>images/normal_img.svg</file>
+        <file>images/not_do_it.svg</file>
+        <file>images/parent_dir.svg</file>
+        <file>images/pdf.svg</file>
+        <file>images/ppt.svg</file>
+        <file>images/pwd.svg</file>
+        <file>images/py.svg</file>
+        <file>images/qie.svg</file>
+        <file>images/qiqiu.svg</file>
+        <file>images/relax.png</file>
+        <file>images/rename.svg</file>
+        <file>images/sea_leaf.svg</file>
+        <file>images/search.svg</file>
+        <file>images/search_blue.svg</file>
+        <file>images/setting.svg</file>
+        <file>images/shanhu.svg</file>
+        <file>images/share.svg</file>
+        <file>images/show_password.svg</file>
+        <file>images/signin.svg</file>
+        <file>images/signup.svg</file>
+        <file>images/simple_back.svg</file>
+        <file>images/simple_forward.svg</file>
+        <file>images/sort.svg</file>
+        <file>images/spider.svg</file>
+        <file>images/test_folder.svg</file>
+        <file>images/tiling.svg</file>
+        <file>images/time.svg</file>
+        <file>images/txt.svg</file>
+        <file>images/unknown_file.svg</file>
+        <file>images/upload.svg</file>
+        <file>images/view_file.svg</file>
+        <file>images/vote.svg</file>
+        <file>images/word.svg</file>
+        <file>images/work.svg</file>
+        <file>images/workspace.svg</file>
+        <file>images/wuwu.svg</file>
+        <file>images/xiaoxiong.svg</file>
+        <file>images/yellow_butterfly.svg</file>
+        <file>images/yezi.svg</file>
+         <file>images/sunflower.svg</file>
+        <file>images/zoom_in.svg</file>
+        <file>images/zoom_out.svg</file>
     </qresource>
 </RCC>
